design tokens update

--- a/src/design-tokens/css/_variables.css
+++ b/src/design-tokens/css/_variables.css
@@ -1,51 +1,109 @@
 /**
  * Do not edit directly
- * Generated on Sun, 04 Dec 2022 02:44:14 GMT
+ * Generated on Wed, 07 Dec 2022 10:31:41 GMT
  */
 
 :root {
-  --hs-spacing-large: [object Object];
-  --hs-spacing-small: [object Object];
-  --hs-color-primary: #8f00ff;
-  --hs-color-error: #ff0000;
-  --hs-color-success: #00b53d;
-  --hs-color-warning: #9cc300;
-  --hs-color-body: #e3e3e3;
-  --hs-color-inverse-body: #f2f2f2;
-  --hs-font-heading-1: [object Object];
-  --hs-font-heading-2: [object Object];
-  --hs-font-body: [object Object];
-  --hs-typography-heading-1-font-size: 32;
-  --hs-typography-heading-1-text-decoration: none;
-  --hs-typography-heading-1-font-family: Inter;
-  --hs-typography-heading-1-font-weight: 400;
-  --hs-typography-heading-1-font-style: normal;
-  --hs-typography-heading-1-font-stretch: normal;
-  --hs-typography-heading-1-letter-spacing: 0;
-  --hs-typography-heading-1-line-height: 38.4;
-  --hs-typography-heading-1-paragraph-indent: 0;
-  --hs-typography-heading-1-paragraph-spacing: 0;
-  --hs-typography-heading-1-text-case: none;
-  --hs-typography-heading-2-font-size: 24;
-  --hs-typography-heading-2-text-decoration: none;
-  --hs-typography-heading-2-font-family: Inter;
-  --hs-typography-heading-2-font-weight: 400;
-  --hs-typography-heading-2-font-style: normal;
-  --hs-typography-heading-2-font-stretch: normal;
-  --hs-typography-heading-2-letter-spacing: 0;
-  --hs-typography-heading-2-line-height: 28.8;
-  --hs-typography-heading-2-paragraph-indent: 0;
-  --hs-typography-heading-2-paragraph-spacing: 0;
-  --hs-typography-heading-2-text-case: none;
-  --hs-typography-body-font-size: 16;
-  --hs-typography-body-text-decoration: none;
-  --hs-typography-body-font-family: Inter;
-  --hs-typography-body-font-weight: 400;
-  --hs-typography-body-font-style: normal;
-  --hs-typography-body-font-stretch: normal;
-  --hs-typography-body-letter-spacing: 0;
-  --hs-typography-body-line-height: 19.2;
-  --hs-typography-body-paragraph-indent: 0;
-  --hs-typography-body-paragraph-spacing: 0;
-  --hs-typography-body-text-case: none;
+  --hs-color-text-color-text: #222222;
+  --hs-color-text-color-text-weak: #717171;
+  --hs-color-text-color-text-success: #008a05;
+  --hs-color-text-color-text-error: #c13515;
+  --hs-color-text-inverse-color-text-inverse: #ffffff;
+  --hs-color-background-color-background-gray-25: #f7f7f7;
+  --hs-color-background-color-background-gray-50: #ebebeb;
+  --hs-color-background-color-background-gray-100: #dddddd;
+  --hs-color-background-color-background-gray-200: #b0b0b0;
+  --hs-color-background-color-background-gray-300: #717171;
+  --hs-color-background-color-background-gray-400: #222222;
+  --hs-color-background-brand-color-background-brand: #ff385c;
+  --hs-color-background-brand-color-background-brand-white: #ffffff;
+  --hs-color-background-success-color-background-success: #008a05;
+  --hs-color-background-warning-color-background-warning: #e07912;
+  --hs-color-background-error-color-background-error: #c13515;
+  --hs-color-background-error-color-background-error-highlight: #fef8f6;
+  --hs-color-background-destructive-color-background-destructive-unlisted: #c13515;
+  --hs-font-family-font-family-text: [object Object];
+  --hs-font-weight-font-weight-normal: [object Object];
+  --hs-font-weight-font-weight-bold: [object Object];
+  --hs-font-size-font-size-40: [object Object];
+  --hs-font-size-font-size-30: [object Object];
+  --hs-font-size-font-size-20: [object Object];
+  --hs-font-size-font-size-10: [object Object];
+  --hs-typography-family-font-family-text-font-size: 16;
+  --hs-typography-family-font-family-text-text-decoration: none;
+  --hs-typography-family-font-family-text-font-family: Circular Std;
+  --hs-typography-family-font-family-text-font-weight: 400;
+  --hs-typography-family-font-family-text-font-style: normal;
+  --hs-typography-family-font-family-text-font-stretch: normal;
+  --hs-typography-family-font-family-text-letter-spacing: 0;
+  --hs-typography-family-font-family-text-line-height: 20;
+  --hs-typography-family-font-family-text-paragraph-indent: 0;
+  --hs-typography-family-font-family-text-paragraph-spacing: 0;
+  --hs-typography-family-font-family-text-text-case: none;
+  --hs-typography-weight-font-weight-normal-font-size: 16;
+  --hs-typography-weight-font-weight-normal-text-decoration: none;
+  --hs-typography-weight-font-weight-normal-font-family: Circular Std;
+  --hs-typography-weight-font-weight-normal-font-weight: 400;
+  --hs-typography-weight-font-weight-normal-font-style: normal;
+  --hs-typography-weight-font-weight-normal-font-stretch: normal;
+  --hs-typography-weight-font-weight-normal-letter-spacing: 0;
+  --hs-typography-weight-font-weight-normal-line-height: 20;
+  --hs-typography-weight-font-weight-normal-paragraph-indent: 0;
+  --hs-typography-weight-font-weight-normal-paragraph-spacing: 0;
+  --hs-typography-weight-font-weight-normal-text-case: none;
+  --hs-typography-weight-font-weight-bold-font-size: 16;
+  --hs-typography-weight-font-weight-bold-text-decoration: none;
+  --hs-typography-weight-font-weight-bold-font-family: Circular Std;
+  --hs-typography-weight-font-weight-bold-font-weight: 700;
+  --hs-typography-weight-font-weight-bold-font-style: normal;
+  --hs-typography-weight-font-weight-bold-font-stretch: normal;
+  --hs-typography-weight-font-weight-bold-letter-spacing: 0;
+  --hs-typography-weight-font-weight-bold-line-height: 20;
+  --hs-typography-weight-font-weight-bold-paragraph-indent: 0;
+  --hs-typography-weight-font-weight-bold-paragraph-spacing: 0;
+  --hs-typography-weight-font-weight-bold-text-case: none;
+  --hs-typography-size-font-size-40-font-size: 26;
+  --hs-typography-size-font-size-40-text-decoration: none;
+  --hs-typography-size-font-size-40-font-family: Circular Std;
+  --hs-typography-size-font-size-40-font-weight: 500;
+  --hs-typography-size-font-size-40-font-style: normal;
+  --hs-typography-size-font-size-40-font-stretch: normal;
+  --hs-typography-size-font-size-40-letter-spacing: 0;
+  --hs-typography-size-font-size-40-line-height: 30;
+  --hs-typography-size-font-size-40-paragraph-indent: 0;
+  --hs-typography-size-font-size-40-paragraph-spacing: 0;
+  --hs-typography-size-font-size-40-text-case: none;
+  --hs-typography-size-font-size-30-font-size: 16;
+  --hs-typography-size-font-size-30-text-decoration: none;
+  --hs-typography-size-font-size-30-font-family: Circular Std;
+  --hs-typography-size-font-size-30-font-weight: 400;
+  --hs-typography-size-font-size-30-font-style: normal;
+  --hs-typography-size-font-size-30-font-stretch: normal;
+  --hs-typography-size-font-size-30-letter-spacing: 0;
+  --hs-typography-size-font-size-30-line-height: 20;
+  --hs-typography-size-font-size-30-paragraph-indent: 0;
+  --hs-typography-size-font-size-30-paragraph-spacing: 0;
+  --hs-typography-size-font-size-30-text-case: none;
+  --hs-typography-size-font-size-20-font-size: 14;
+  --hs-typography-size-font-size-20-text-decoration: none;
+  --hs-typography-size-font-size-20-font-family: Circular Std;
+  --hs-typography-size-font-size-20-font-weight: 400;
+  --hs-typography-size-font-size-20-font-style: normal;
+  --hs-typography-size-font-size-20-font-stretch: normal;
+  --hs-typography-size-font-size-20-letter-spacing: 0;
+  --hs-typography-size-font-size-20-line-height: 18;
+  --hs-typography-size-font-size-20-paragraph-indent: 0;
+  --hs-typography-size-font-size-20-paragraph-spacing: 0;
+  --hs-typography-size-font-size-20-text-case: none;
+  --hs-typography-size-font-size-10-font-size: 10;
+  --hs-typography-size-font-size-10-text-decoration: none;
+  --hs-typography-size-font-size-10-font-family: Circular Std;
+  --hs-typography-size-font-size-10-font-weight: 700;
+  --hs-typography-size-font-size-10-font-style: normal;
+  --hs-typography-size-font-size-10-font-stretch: normal;
+  --hs-typography-size-font-size-10-letter-spacing: 0;
+  --hs-typography-size-font-size-10-line-height: 14;
+  --hs-typography-size-font-size-10-paragraph-indent: 0;
+  --hs-typography-size-font-size-10-paragraph-spacing: 0;
+  --hs-typography-size-font-size-10-text-case: uppercase;
 }
