design tokens update

--- a/src/design-tokens/css/_variables.css
+++ b/src/design-tokens/css/_variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Wed, 07 Dec 2022 10:31:41 GMT
+ * Generated on Wed, 07 Dec 2022 15:46:37 GMT
  */
 
 :root {
@@ -25,10 +25,22 @@
   --hs-font-family-font-family-text: [object Object];
   --hs-font-weight-font-weight-normal: [object Object];
   --hs-font-weight-font-weight-bold: [object Object];
+  --hs-font-size-font-size-70: [object Object];
+  --hs-font-size-font-size-60: [object Object];
+  --hs-font-size-font-size-50: [object Object];
   --hs-font-size-font-size-40: [object Object];
   --hs-font-size-font-size-30: [object Object];
   --hs-font-size-font-size-20: [object Object];
-  --hs-font-size-font-size-10: [object Object];
+  --hs-font-heading-h1: [object Object];
+  --hs-font-heading-h2: [object Object];
+  --hs-font-heading-h3: [object Object];
+  --hs-font-heading-h4: [object Object];
+  --hs-font-heading-h5: [object Object];
+  --hs-font-paragraph-p: [object Object];
+  --hs-font-caption-caption: [object Object];
+  --hs-font-label-large: [object Object];
+  --hs-font-label-medium: [object Object];
+  --hs-font-label-small: [object Object];
   --hs-typography-family-font-family-text-font-size: 16;
   --hs-typography-family-font-family-text-text-decoration: none;
   --hs-typography-family-font-family-text-font-family: Circular Std;
@@ -62,48 +74,180 @@
   --hs-typography-weight-font-weight-bold-paragraph-indent: 0;
   --hs-typography-weight-font-weight-bold-paragraph-spacing: 0;
   --hs-typography-weight-font-weight-bold-text-case: none;
-  --hs-typography-size-font-size-40-font-size: 26;
+  --hs-typography-size-font-size-70-font-size: 56;
+  --hs-typography-size-font-size-70-text-decoration: none;
+  --hs-typography-size-font-size-70-font-family: Circular Std;
+  --hs-typography-size-font-size-70-font-weight: 400;
+  --hs-typography-size-font-size-70-font-style: normal;
+  --hs-typography-size-font-size-70-font-stretch: normal;
+  --hs-typography-size-font-size-70-letter-spacing: 0;
+  --hs-typography-size-font-size-70-line-height: 64;
+  --hs-typography-size-font-size-70-paragraph-indent: 0;
+  --hs-typography-size-font-size-70-paragraph-spacing: 0;
+  --hs-typography-size-font-size-70-text-case: none;
+  --hs-typography-size-font-size-60-font-size: 32;
+  --hs-typography-size-font-size-60-text-decoration: none;
+  --hs-typography-size-font-size-60-font-family: Circular Std;
+  --hs-typography-size-font-size-60-font-weight: 400;
+  --hs-typography-size-font-size-60-font-style: normal;
+  --hs-typography-size-font-size-60-font-stretch: normal;
+  --hs-typography-size-font-size-60-letter-spacing: 0;
+  --hs-typography-size-font-size-60-line-height: 36;
+  --hs-typography-size-font-size-60-paragraph-indent: 0;
+  --hs-typography-size-font-size-60-paragraph-spacing: 0;
+  --hs-typography-size-font-size-60-text-case: none;
+  --hs-typography-size-font-size-50-font-size: 26;
+  --hs-typography-size-font-size-50-text-decoration: none;
+  --hs-typography-size-font-size-50-font-family: Circular Std;
+  --hs-typography-size-font-size-50-font-weight: 400;
+  --hs-typography-size-font-size-50-font-style: normal;
+  --hs-typography-size-font-size-50-font-stretch: normal;
+  --hs-typography-size-font-size-50-letter-spacing: 0;
+  --hs-typography-size-font-size-50-line-height: 30;
+  --hs-typography-size-font-size-50-paragraph-indent: 0;
+  --hs-typography-size-font-size-50-paragraph-spacing: 0;
+  --hs-typography-size-font-size-50-text-case: none;
+  --hs-typography-size-font-size-40-font-size: 16;
   --hs-typography-size-font-size-40-text-decoration: none;
   --hs-typography-size-font-size-40-font-family: Circular Std;
-  --hs-typography-size-font-size-40-font-weight: 500;
+  --hs-typography-size-font-size-40-font-weight: 400;
   --hs-typography-size-font-size-40-font-style: normal;
   --hs-typography-size-font-size-40-font-stretch: normal;
   --hs-typography-size-font-size-40-letter-spacing: 0;
-  --hs-typography-size-font-size-40-line-height: 30;
+  --hs-typography-size-font-size-40-line-height: 20;
   --hs-typography-size-font-size-40-paragraph-indent: 0;
   --hs-typography-size-font-size-40-paragraph-spacing: 0;
   --hs-typography-size-font-size-40-text-case: none;
-  --hs-typography-size-font-size-30-font-size: 16;
+  --hs-typography-size-font-size-30-font-size: 14;
   --hs-typography-size-font-size-30-text-decoration: none;
   --hs-typography-size-font-size-30-font-family: Circular Std;
   --hs-typography-size-font-size-30-font-weight: 400;
   --hs-typography-size-font-size-30-font-style: normal;
   --hs-typography-size-font-size-30-font-stretch: normal;
   --hs-typography-size-font-size-30-letter-spacing: 0;
-  --hs-typography-size-font-size-30-line-height: 20;
+  --hs-typography-size-font-size-30-line-height: 18;
   --hs-typography-size-font-size-30-paragraph-indent: 0;
   --hs-typography-size-font-size-30-paragraph-spacing: 0;
   --hs-typography-size-font-size-30-text-case: none;
-  --hs-typography-size-font-size-20-font-size: 14;
+  --hs-typography-size-font-size-20-font-size: 12;
   --hs-typography-size-font-size-20-text-decoration: none;
   --hs-typography-size-font-size-20-font-family: Circular Std;
   --hs-typography-size-font-size-20-font-weight: 400;
   --hs-typography-size-font-size-20-font-style: normal;
   --hs-typography-size-font-size-20-font-stretch: normal;
   --hs-typography-size-font-size-20-letter-spacing: 0;
-  --hs-typography-size-font-size-20-line-height: 18;
+  --hs-typography-size-font-size-20-line-height: 16;
   --hs-typography-size-font-size-20-paragraph-indent: 0;
   --hs-typography-size-font-size-20-paragraph-spacing: 0;
   --hs-typography-size-font-size-20-text-case: none;
-  --hs-typography-size-font-size-10-font-size: 10;
-  --hs-typography-size-font-size-10-text-decoration: none;
-  --hs-typography-size-font-size-10-font-family: Circular Std;
-  --hs-typography-size-font-size-10-font-weight: 700;
-  --hs-typography-size-font-size-10-font-style: normal;
-  --hs-typography-size-font-size-10-font-stretch: normal;
-  --hs-typography-size-font-size-10-letter-spacing: 0;
-  --hs-typography-size-font-size-10-line-height: 14;
-  --hs-typography-size-font-size-10-paragraph-indent: 0;
-  --hs-typography-size-font-size-10-paragraph-spacing: 0;
-  --hs-typography-size-font-size-10-text-case: uppercase;
+  --hs-typography-heading-h1-font-size: 56;
+  --hs-typography-heading-h1-text-decoration: none;
+  --hs-typography-heading-h1-font-family: Circular Std;
+  --hs-typography-heading-h1-font-weight: 700;
+  --hs-typography-heading-h1-font-style: normal;
+  --hs-typography-heading-h1-font-stretch: normal;
+  --hs-typography-heading-h1-letter-spacing: 0;
+  --hs-typography-heading-h1-line-height: 64;
+  --hs-typography-heading-h1-paragraph-indent: 0;
+  --hs-typography-heading-h1-paragraph-spacing: 0;
+  --hs-typography-heading-h1-text-case: none;
+  --hs-typography-heading-h2-font-size: 32;
+  --hs-typography-heading-h2-text-decoration: none;
+  --hs-typography-heading-h2-font-family: Circular Std;
+  --hs-typography-heading-h2-font-weight: 700;
+  --hs-typography-heading-h2-font-style: normal;
+  --hs-typography-heading-h2-font-stretch: normal;
+  --hs-typography-heading-h2-letter-spacing: 0;
+  --hs-typography-heading-h2-line-height: 36;
+  --hs-typography-heading-h2-paragraph-indent: 0;
+  --hs-typography-heading-h2-paragraph-spacing: 0;
+  --hs-typography-heading-h2-text-case: none;
+  --hs-typography-heading-h3-font-size: 26;
+  --hs-typography-heading-h3-text-decoration: none;
+  --hs-typography-heading-h3-font-family: Circular Std;
+  --hs-typography-heading-h3-font-weight: 700;
+  --hs-typography-heading-h3-font-style: normal;
+  --hs-typography-heading-h3-font-stretch: normal;
+  --hs-typography-heading-h3-letter-spacing: 0;
+  --hs-typography-heading-h3-line-height: 30;
+  --hs-typography-heading-h3-paragraph-indent: 0;
+  --hs-typography-heading-h3-paragraph-spacing: 0;
+  --hs-typography-heading-h3-text-case: none;
+  --hs-typography-heading-h4-font-size: 16;
+  --hs-typography-heading-h4-text-decoration: none;
+  --hs-typography-heading-h4-font-family: Circular Std;
+  --hs-typography-heading-h4-font-weight: 700;
+  --hs-typography-heading-h4-font-style: normal;
+  --hs-typography-heading-h4-font-stretch: normal;
+  --hs-typography-heading-h4-letter-spacing: 0;
+  --hs-typography-heading-h4-line-height: 22;
+  --hs-typography-heading-h4-paragraph-indent: 0;
+  --hs-typography-heading-h4-paragraph-spacing: 0;
+  --hs-typography-heading-h4-text-case: none;
+  --hs-typography-heading-h5-font-size: 14;
+  --hs-typography-heading-h5-text-decoration: none;
+  --hs-typography-heading-h5-font-family: Circular Std;
+  --hs-typography-heading-h5-font-weight: 700;
+  --hs-typography-heading-h5-font-style: normal;
+  --hs-typography-heading-h5-font-stretch: normal;
+  --hs-typography-heading-h5-letter-spacing: 0;
+  --hs-typography-heading-h5-line-height: 22;
+  --hs-typography-heading-h5-paragraph-indent: 0;
+  --hs-typography-heading-h5-paragraph-spacing: 0;
+  --hs-typography-heading-h5-text-case: none;
+  --hs-typography-paragraph-p-font-size: 16;
+  --hs-typography-paragraph-p-text-decoration: none;
+  --hs-typography-paragraph-p-font-family: Circular Std;
+  --hs-typography-paragraph-p-font-weight: 400;
+  --hs-typography-paragraph-p-font-style: normal;
+  --hs-typography-paragraph-p-font-stretch: normal;
+  --hs-typography-paragraph-p-letter-spacing: 0;
+  --hs-typography-paragraph-p-line-height: 20;
+  --hs-typography-paragraph-p-paragraph-indent: 0;
+  --hs-typography-paragraph-p-paragraph-spacing: 0;
+  --hs-typography-paragraph-p-text-case: none;
+  --hs-typography-caption-caption-font-size: 14;
+  --hs-typography-caption-caption-text-decoration: none;
+  --hs-typography-caption-caption-font-family: Circular Std;
+  --hs-typography-caption-caption-font-weight: 400;
+  --hs-typography-caption-caption-font-style: normal;
+  --hs-typography-caption-caption-font-stretch: normal;
+  --hs-typography-caption-caption-letter-spacing: 0;
+  --hs-typography-caption-caption-line-height: 18;
+  --hs-typography-caption-caption-paragraph-indent: 0;
+  --hs-typography-caption-caption-paragraph-spacing: 0;
+  --hs-typography-caption-caption-text-case: none;
+  --hs-typography-label-large-font-size: 14;
+  --hs-typography-label-large-text-decoration: none;
+  --hs-typography-label-large-font-family: Circular Std;
+  --hs-typography-label-large-font-weight: 400;
+  --hs-typography-label-large-font-style: normal;
+  --hs-typography-label-large-font-stretch: normal;
+  --hs-typography-label-large-letter-spacing: 0;
+  --hs-typography-label-large-line-height: 18;
+  --hs-typography-label-large-paragraph-indent: 0;
+  --hs-typography-label-large-paragraph-spacing: 0;
+  --hs-typography-label-large-text-case: none;
+  --hs-typography-label-medium-font-size: 12;
+  --hs-typography-label-medium-text-decoration: none;
+  --hs-typography-label-medium-font-family: Circular Std;
+  --hs-typography-label-medium-font-weight: 700;
+  --hs-typography-label-medium-font-style: normal;
+  --hs-typography-label-medium-font-stretch: normal;
+  --hs-typography-label-medium-letter-spacing: 0;
+  --hs-typography-label-medium-line-height: 16;
+  --hs-typography-label-medium-paragraph-indent: 0;
+  --hs-typography-label-medium-paragraph-spacing: 0;
+  --hs-typography-label-medium-text-case: none;
+  --hs-typography-label-small-font-size: 10;
+  --hs-typography-label-small-text-decoration: none;
+  --hs-typography-label-small-font-family: Circular Std;
+  --hs-typography-label-small-font-weight: 700;
+  --hs-typography-label-small-font-style: normal;
+  --hs-typography-label-small-font-stretch: normal;
+  --hs-typography-label-small-letter-spacing: 0;
+  --hs-typography-label-small-line-height: 14;
+  --hs-typography-label-small-paragraph-indent: 0;
+  --hs-typography-label-small-paragraph-spacing: 0;
+  --hs-typography-label-small-text-case: uppercase;
 }
