--- a/src/design-tokens/css/_variables.css
+++ b/src/design-tokens/css/_variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Sun Dec 11 2022 22:52:28 GMT+0000 (Coordinated Universal Time)
+ * Generated on Mon Dec 12 2022 14:10:24 GMT+0000 (Coordinated Universal Time)
  */
  
 :root {
@@ -16,6 +16,7 @@
 	--belo-color-background-color-background-gray-100: #ddddddff;
 	--belo-color-background-color-background-gray-200: #b0b0b0ff;
 	--belo-color-background-color-background-gray-300: #717171ff;
+	--belo-color-background-color-background-gray-400: #222222ff;
 	--belo-color-background-color-icon-background: #222222ff;
 	--belo-color-background-color-background-secondary: #d70466ff;
 	--belo-color-background-color-background-secondary-violet: #410aa8ff;
@@ -23,7 +24,6 @@
 	--belo-color-background-color-background-brand-black: #000000ff;
 	--belo-color-background-brand-color-background-brand: #ff385cff;
 	--belo-color-background-brand-color-background-brand-white: #ffffffff;
-	--belo-color-background-background-background: undefined;
 	--belo-color-background-success-color-background-success: #008a05ff;
 	--belo-color-background-warning-color-background-warning: #e07912ff;
 	--belo-color-background-error-color-background-error: #c13515ff;
