--- a/src/components/belo-card/belo-card.css
+++ b/src/components/belo-card/belo-card.css
@@ -1,3 +1,5 @@
+@import "../../design-tokens/css/_variables.css";
+@import url('https://fonts.cdnfonts.com/css/circular-std?styles=17909,17910,17911,17912,17907,17908,17905,17906');
 :host {
   display: block;
 }
