--- a/src/components/belo-button/belo-button.css
+++ b/src/components/belo-button/belo-button.css
@@ -1,6 +1,5 @@
 @import "../../design-tokens/css/_variables.css";
 @import url('https://fonts.cdnfonts.com/css/circular-std?styles=17909,17910,17911,17912,17907,17908,17905,17906');
-
 .btn-primary {
   display: inline-block;
   cursor: pointer;
@@ -12,10 +11,10 @@
 
   color: var(--belo-color-text-inverse-color-text-inverse);
 
-  font-family: var(--belo-font-weight-font-weight-bold-font-family), 'sans-serif';
-  font-size: calc(var(--belo-font-weight-font-weight-bold-font-size) * 1px);
-  font-weight: var(--belo-font-weight-font-weight-bold-font-weight);
-  line-height: calc(var(--belo-font-weight-font-weight-bold-line-height) * 1px);
+  font-family: var(--belo-font-family-font-family-text-fontfamily);
+  font-size: var(--belo-font-family-font-family-text-fontsize);
+  font-weight: var(--belo-font-weight-font-weight-bold-fontweight);
+  line-height: var(--belo-font-family-font-family-text-lineheight);
 
   /* REPLACE PADDNIG WITH TOKENS */
   padding-left: 48px;
@@ -61,10 +60,10 @@
   border: none;
   color: var(--belo-color-text-inverse-color-text-inverse);
 
-  font-family: var(--belo-font-weight-font-weight-bold-font-family), 'sans-serif';
-  font-size: calc(var(--belo-font-weight-font-weight-bold-font-size) * 1px);
-  font-weight: var(--belo-font-weight-font-weight-bold-font-weight);
-  line-height: calc(var(--belo-font-weight-font-weight-bold-line-height) * 1px);
+  font-family: var(--belo-font-family-font-family-text-fontfamily);
+  font-size: var(--belo-font-family-font-family-text-fontsize);
+  font-weight: var(--belo-font-weight-font-weight-bold-fontweight);
+  line-height: var(--belo-font-family-font-family-text-lineheight);
 
   /* REPLACE PADDNIG WITH TOKENS */
   padding-left: 48px;
@@ -108,10 +107,10 @@
   border: none;
   color: var(--belo-color-text-inverse-color-text-inverse);
 
-  font-family: var(--belo-font-weight-font-weight-bold-font-family), 'sans-serif';
-  font-size: calc(var(--belo-font-weight-font-weight-bold-font-size) * 1px);
-  font-weight: var(--belo-font-weight-font-weight-bold-font-weight);
-  line-height: calc(var(--belo-font-weight-font-weight-bold-line-height) * 1px);
+  font-family: var(--belo-font-family-font-family-text-fontfamily);
+  font-size: var(--belo-font-family-font-family-text-fontsize);
+  font-weight: var(--belo-font-weight-font-weight-bold-fontweight);
+  line-height: var(--belo-font-family-font-family-text-lineheight);
 
   /* REPLACE PADDNIG WITH TOKENS */
   padding-left: 48px;
@@ -164,10 +163,10 @@
 
   box-sizing: border-box;
 
-  font-family: var(--belo-font-weight-font-weight-bold-font-family), 'sans-serif';
-  font-size: calc(var(--belo-font-weight-font-weight-bold-font-size) * 1px);
-  font-weight: var(--belo-font-weight-font-weight-bold-font-weight);
-  line-height: calc(var(--belo-font-weight-font-weight-bold-line-height) * 1px);
+  font-family: var(--belo-font-family-font-family-text-fontfamily);
+  font-size: var(--belo-font-family-font-family-text-fontsize);
+  font-weight: var(--belo-font-weight-font-weight-bold-fontweight);
+  line-height: var(--belo-font-family-font-family-text-lineheight);
 
   /* REPLACE PADDNIG WITH TOKENS */
   padding-left: 48px;
