--- a/src/components/belo-caption/belo-caption.css
+++ b/src/components/belo-caption/belo-caption.css
@@ -3,12 +3,15 @@
 :host {
   display: block;
   font-family: var(--belo-font-family-font-family-text-font-family), 'sans-serif';
-  font-size: calc(var(--belo-font-caption-caption-font-size) * 1px);
+  font-size: var(--belo-font-size-font-size-30-fontsize);
   font-weight: var(--belo-font-caption-caption-font-weight);
-  line-height: calc(var(--belo-font-caption-caption-line-height) * 1px);
+  line-height: var(--belo-font-size-font-size-30-lineheight);
 }
 
 
 * {
-  font-family: var(--belo-font-family-font-family-text-font-family);
+  font-family: var(--belo-font-family-font-family-text-fontfamily);
+  font-size: var(--belo-font-size-font-size-30-fontsize);
+  font-weight: var(--belo-font-caption-caption-font-weight);
+  line-height: var(--belo-font-size-font-size-30-lineheight);
 }
