--- a/src/components/belo-input/belo-input.css
+++ b/src/components/belo-input/belo-input.css
@@ -18,21 +18,21 @@
 input {
   outline: none;
   border: none;
-  font-size: calc(var(--belo-font-family-font-family-text-font-size) * 1px);
+  font-size: var(--belo-font-family-font-family-text-fontsize);
   font-family: var(--belo-font-family-font-family-text-font-family);
   padding-left: 16px;
   padding-bottom: 18px;
 }
 label {
   display: block;
-  font-size: calc(var(--belo-font-size-font-size-20-font-size) * 1px);
+  font-size: var(--belo-font-size-font-size-20-fontsize);
   font-family: var(--belo-font-family-font-family-text-font-family);
   padding-left: 16px;
   color: transparent;
 }
 
 .hint-true {
-  font-size: calc(var(--belo-font-size-font-size-20-font-size) * 1px);
+  font-size: var(--belo-font-size-font-size-20-fontsize);
   font-family: var(--belo-font-family-font-family-text-font-family);
   color: var(--belo-color-text-color-text-weak);
   padding-left: 4px;
@@ -79,7 +79,7 @@ input:focus +label.required-text {
 .required-focused{
   background-color: transparent;
 }
-.full-input.required:focus-within {
+.full-input.required:focus-within{
   border-color: var(--belo-color-border-color-border-error);
   background-color: transparent;
 }
