--- a/src/components/belo-card/belo-card.css
+++ b/src/components/belo-card/belo-card.css
@@ -1,3 +1,5 @@
+@import "../../design-tokens/css/_variables.css";
+@import url('https://fonts.cdnfonts.com/css/circular-std?styles=17909,17910,17911,17912,17907,17908,17905,17906');
 :host {
   display: block;
   font-family: var(--belo-font-family-font-family-text-fontfamily);
@@ -5,85 +7,27 @@
 }
 * {
   font-family: var(--belo-font-family-font-family-text-fontfamily);
-
 }
-
-.container {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  width: 342px;
-  height: 398px;
-  background-color: white;
-}
-
-p, span {
-  margin: 0;
-  padding: 0;
-  color: var(--belo-color-text-color-text);
-  font-family: var(--belo-font-family-font-family-text-fontfamily);
-
-}
-
-.inline {
-display: flex;
-flex-direction: row;
-gap: 190px;
-padding-top: 16px;
-
-}
-
-.inline-inner{
-display: flex;
-flex-direction: row;
-gap: 2px;
-margin-left: auto;
-}
-
-.inline-bottom {
-  display: flex;
-  flex-direction: row;
-  padding-top: 11px;
-  gap: 10px;
-}
-
 
 img {
-  width: 342px;
-  height: 305px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 12px;
-
+  margin-bottom: 13px;
 }
 
-svg {
-  padding-top: 2px;
+p,h4,h5 {
+  margin: 0px;
+  padding: 0px;
+}
+div {
+  width: 342px;
+  height: 400px;
 }
 
-.location {
-  font-size: var(--belo-font-family-font-family-text-font-size);
-  font-family: var(--belo-font-family-font-family-text-fontfamily);
-  font-weight: bold;
-}
-
-.score {
-  font-size: calc(var(--belo-font-size-font-size-40-font-siz) * 1px);
-  font-family: var(--belo-font-family-font-family-text-fontfamily);
-
-}
-
-.listing {
-  font-size: var(--belo-font-size-font-size-40-font-siz);
-  font-weight: var(--belo-font-weight-font-weight-normal-font-size);
-  font-family: var(--belo-font-family-font-family-text-fontfamily);
-  color: var(--belo-color-text-color-text-weak);
-}
-
-.total-price {
-  font-size: var(--belo-font-size-font-size-30-font-size);
-  font-family: var(--belo-font-family-font-family-text-fontfamily);
-  color: var(--belo-color-text-color-text-weak);
-}
-
-.border {
-  border-bottom: 1px solid grey;
+div:focus {
+  outline: none;
+  border: 2px solid black;
+  border-radius: 2px;
 }
