--- a/src/components/belo-card/belo-card.css
+++ b/src/components/belo-card/belo-card.css
@@ -1,15 +1,11 @@
 @import "../../design-tokens/css/_variables.css";
 @import url('https://fonts.cdnfonts.com/css/circular-std?styles=17909,17910,17911,17912,17907,17908,17905,17906');
-:host {
-  display: block;
-  font-family: var(--belo-font-family-font-family-text-fontfamily);
 
-}
 * {
   font-family: var(--belo-font-family-font-family-text-fontfamily);
 }
 
-img {
+.card-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -17,17 +13,14 @@ img {
   margin-bottom: 13px;
 }
 
-p,h4,h5 {
+.card-text {
   margin: 0px;
   padding: 0px;
 }
-div {
-  width: 342px;
-  height: 400px;
-}
 
-div:focus {
+
+.card-container:focus {
   outline: none;
   border: 2px solid black;
-  border-radius: 2px;
+  border-radius: 12px;
 }
